--- a/views/to.ejs
+++ b/views/to.ejs
@@ -73,7 +73,7 @@
                 <div class="single-item">
                     <div class="slide">
                         <img
-                            src="http://localhost:3000/upload/iblock/f14/f148417651d105aed7fb31f6d5b672e5.png"
+                            src="/upload/iblock/f14/f148417651d105aed7fb31f6d5b672e5.png"
                             alt=""
                         />
                     </div>
